--- a/index.html
+++ b/index.html
@@ -8,15 +8,62 @@
     <title></title>
   </head>
   <body>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-sm red">
+    <div class="container-fluid full-width">
+      <div class="container wrapper">
+        <div class="row top">
+          <div class="col-2 top-lang">
+          </div>
+          <div class="col-7">
+          </div>
+          <div class="col-3 top-links">
+          </div>
         </div>
-        <div class="col-sm black">
+        <div id="top-shadow-container">
+          <nav class="navbar navbar-expand-md">
+            <a class="navbar-brand" href="#">
+              <img src="./images/inbank-logo.png" id="top-logo" alt="">
+            </a>
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbar-content" aria-controls="navbar-content" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbar-content">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Deposit <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Deposit</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Deposit</a>
+                </li>
+                <li class="nav-item">
+                  <button type="button" class="btn rounded-button" id="purple-button">Log in</button>
+                </li>
+              </ul>
+
+            </div>
+          </nav>
+          <div class="top-phone-container">
+            <p>+37256738622</p>
+          </div>
+        </div>
+        <h1 id="centered-heading">Lorem ipsum dolores</h1>
+        <div class="row justify-content-center">
+          <div class="col-3 benefits">
+            Some benefits
+          </div>
+          <div class="col-3 benefits">
+            Other benefits
+          </div>
+          <div class="col-3 benefits">
+            Some more
+          </div>
         </div>
       </div>
     </div>
-
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
   </body>
 </html>
