--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.0.0/css/bootstrap-slider.min.css">
     <link rel="stylesheet" href="./stylesheets/index.css">
     <title></title>
   </head>
@@ -50,20 +51,39 @@
         </div>
         <h1 id="centered-heading">Lorem ipsum dolores</h1>
         <div class="row justify-content-center">
-          <div class="col-3 benefits">
+          <div class="col-sm-3 benefits">
             Some benefits
           </div>
-          <div class="col-3 benefits">
+          <div class="col-sm-3 benefits">
             Other benefits
           </div>
-          <div class="col-3 benefits">
+          <div class="col-sm-3 benefits">
             Some more
           </div>
         </div>
+        <div class="row sliders-section">
+          <div class="col-sm-8 sliders">
+            <div class="slider-container">
+                <input class="slider" id="amount-slider" type="range" data-slider-min="1000" data-slider-max="4000" data-slider-step="1" data-slider-value="1500"/>
+            </div>
+            <div class="slider-container">
+                <input class="slider" id="period-slider" type="range" data-slider-min="1" data-slider-max="4" data-slider-step="1" data-slider-value="3"/>
+            </div>
+
+          </div>
+          <div class="col-sm-4 cal">
+            <p>Lorem ipsum dolores</p>
+            <span id="calculated-amount">3</span>
+          </div>
+        </div>
+
       </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.0.0/bootstrap-slider.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+    <script src="./scripts/sliders.js"></script>
   </body>
 </html>
